Changements 2023-01-26 [création de la branche "v2"]:
* Bug
 - Résolution du bug où les évènements passés disparaissaient et n'étaient plus visible
* Export
 - Les exports de données se font dorénavant au format .csv
* Fiches espèces
 - Ajout du calendrier phénologique à la fin de chaque fiche espèce
* Misc
 - Changement de catégorie du ciste cotonneux (dorénavant dans la catégorie "arbres")